# Multimedia_Downloader

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Multimedia_Downloader.py  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  cli.py  core.py  engine_sidecar.py  i18n.py  package-lock.json  package.json  requirements-tui.txt  requirements-web.txt  requirements.txt  web_app.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
ai/: __init__.py  models.py  orchestrator.py
engine/: __init__.py  converter.py  downloader.py  formats.py  options.py  queue.py  requirements.txt
frontend/: .env.web  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.svelte  api.ts  app.css  store.ts  vite-env.d.ts
frontend/src/ai/: AiPanel.svelte
i18n/: __init__.py
locales/: en.json  zh_cn.json  zh_tw.json
packaging/: build-desktop.ps1  engine_sidecar.spec
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
static/: script.js  styles.css
templates/: index.html
termux/: README.md  run-cli.sh  run-web.sh
tests/: README.md  _path.py  test_converter.py  test_downloader.py  test_formats.py  test_i18n.py  test_orchestrator.py  test_queue.py  test_sidecar.py  test_tui.py
tui/: __init__.py  __main__.py  app.py  convert_tab.py  download_tab.py  log_tab.py  style.tcss  widgets.py
(+13 files in other folders)
